load html sections

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,14 @@
   <body>
     <load ="partials/header.html" />
     <load ="partials/hero.html" />
-
+    <load ="partials/about_us.html" />
+    <load ="partials/price.html" />
+    <load ="partials/our_products.html" />
+    <load ="partials/bestsellers.html" />
+    <load ="partials/clients_reviews.html" />
+    <load ="partials/subscription.html" />
+    <load ="partials/footer.html" />
+    
     <section>
       <h1>Lorem ipsum dolor sit amet.</h1>
       <!-- Path to images as from index.html file -->
