--- a/src/index.html
+++ b/src/index.html
@@ -5,25 +5,35 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Normalize -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>MINIMAL</title>
   </head>
+
   <body>
-    <load ="partials/header.html" />
-    <load ="partials/hero.html" />
-    <load ="partials/about_us.html" />
-    <load ="partials/price.html" />
-    <load ="partials/our_products.html" />
-    <load ="partials/bestsellers.html" />
-    <load ="partials/clients_reviews.html" />
-    <load ="partials/subscription.html" />
-    <load ="partials/footer.html" />
-    
+    <load src="partials/header.html" />
+    <main>
+      <load src="partials/hero.html" />
+      <load src="partials/about_us.html" />
+      <load src="partials/price.html" />
+      <load src="partials/our_products.html" />
+      <load src="partials/bestsellers.html" />
+      <load src="partials/clients_reviews.html" />
+      <load src="partials/subscription.html" />
+    </main>
+
+    <load src="partials/footer.html" />
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
