--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,44 @@
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
-    <noscript
-      ><link rel="stylesheet" href="./css/styles.css" />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Roboto:wght@400;700&display=swap"
-        rel="stylesheet" />
+    <noscript>
+      <link rel="stylesheet" href="./css/styles.css" />
+    </noscript>
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+    <link
+      rel="preload"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
       <link
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
-    /></noscript>
+      />
+    </noscript>
+
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    /> -->
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Roboto:wght@400;700&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Roboto:wght@400;700&display=swap"
+      />
+    </noscript>
+
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    /> -->
   </head>
 
   <body>
