--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- Normalize -->
+    <!-- <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    /> -->
 
     <title>MINIMAL</title>
     <link
@@ -20,7 +29,7 @@
     <noscript>
       <link rel="stylesheet" href="./css/styles.css" />
     </noscript>
-    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+
     <link
       rel="preload"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
@@ -34,10 +43,6 @@
       />
     </noscript>
 
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
-    /> -->
     <link
       rel="preload"
       href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Roboto:wght@400;700&display=swap"
@@ -50,11 +55,6 @@
         href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Roboto:wght@400;700&display=swap"
       />
     </noscript>
-
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    /> -->
   </head>
 
   <body>
