--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    
-<!-- Normalize -->
-    <!-- <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- Normalize -->
+    <!-- 
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
@@ -19,7 +19,7 @@
       rel="stylesheet"
     /> -->
 
-    <link
+    <!-- <link
       rel="preload"
       href="./css/styles.css"
       as="style"
@@ -27,7 +27,7 @@
     />
     <noscript>
       <link rel="stylesheet" href="./css/styles.css" />
-    </noscript>
+    </noscript> -->
 
     <link
       rel="preload"
