--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
       />
     </noscript>
     <title>MINIMAL</title>
+    <meta name="description" content="Minimal page project 12" />
     <link
       rel="preload"
       href="./css/styles.css"
